// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withState should accept a pre-middleware function 1`] = `
<div>
  Hello, 
  !
</div>
`;

exports[`withState should wrap 1`] = `
<div>
  Hello
</div>
`;

exports[`withState supports partial application  1`] = `
<div>
  Hello, 
  Dan
  !
</div>
`;

exports[`withState supports partial application  2`] = `
<div>
  Ciao, 
  Dan
  !
</div>
`;
